<?xml version="1.0"?>
<package format="3">
  <name>py_pkg</name>
  <version>0.0.1</version>
  <description>Simple example ROS 2 Python package (first_node).</description>
  <maintainer email="robo@todo.todo">robo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
